// protoc -I proto/ proto/service.proto --go_out=plugins=grpc:proto
syntax = "proto3";

package proto;

service KVStore {
  rpc Get(Key) returns (Value) {}
  rpc Set(KeyValuePair) returns (SetResponse) {}
  rpc GetPrefix(PrefixKey) returns (stream Value) {}
}

message Key { string key = 1; }

message Value { string value = 1; }

message KeyValuePair {
  string key = 1;
  string value = 2;
}

message SetResponse { bool success = 1; }

message PrefixKey { string prefix = 1; }
